--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.devcamp</groupId>
 	<artifactId>real-estate-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>real-estate-backend</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
